# nullspace

./: .dockerignore  .gitignore  .sops.yaml  AGENTS.md  BUSINESS_PLAN.md  CLAUDE.md  Caddyfile.testnet  Cargo.toml  Dockerfile  Dockerfile.node.local  Dockerfile.sim.local  IMPLEMENTATION_PLAN.md  README.md  Untitled  api.md  architecture.md  deliverables.md  economy.md  economy_log.json  economy_log.prev_report.json  economy_log.prev_run2.json  games.md  golive.md  liquidity.md  load-test-report.json  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  quickstart.md  refactor.md  refactor2.md  refactor3.md  review.md  run_test_suite.sh  startup.md  super.md  turbo.json
.claude/: settings.json
.gemini/: settings.json
.serena/: project.yml
.tmp/: mempool_probe.mjs
build-node/: Dockerfile
build-sim/: Dockerfile
client/: Cargo.toml  Dockerfile  README.md
client/examples/: README.md  bot.rs  comprehensive_bot.rs  maximize_pnl.rs  network_bot.rs  simulation_ecosystem.rs
client/src/: client.rs  consensus.rs  events.rs  lib.rs
configs/: review-agents.json
deployer/: Cargo.toml  Dockerfile  README.md  dashboard.json
deployer/src/: main.rs
docs/: ARCHITECTURE.md  BUSINESS_PLAN.md  RUNBOOK.md  SECURITY.md  SERVERS.md  STRATEGY.md  TESTNET-CONSENSUS-RECOVERY-2026-01.md  api.md  blockchain_consensus_migration_research.md  cca_runbook.md  commonware_multi_node_setup.md  convex-guidelines.md  convex-migration.md  design.md  economy.md  feynman-management-review.md  framework_documentation_research.md  frontend.md  gemini.md  gemini_strategic_plan.md  golive.md  hetzner-deployment-runbook.md  key_generation_research.md  lightning_multiplier_research.md  limits.md  liquidity.md  management-action-items.md  masterreview.md  mobile-e2e-parity.md  mobile-vault-qa-runbook.md  node_indexer_interaction.md  observability.md  persistence.md  plan.md  postgres-ops-runbook.md  refactor5.md  release.md  remediation.md  resource_sizing.md  runbooks.md  (+9 more)
evm/: .env.example  .gitignore  foundry.toml  hardhat.config.js  package-lock.json  package.json  tsconfig.json
execution/: Cargo.toml  README.md
execution/src/: cross_platform_tests.rs  elo.rs  fixed.rs  height_handling_tests.rs  idempotency_tests.rs  lib.rs  mocks.rs  replay_harness_tests.rs  rng_pipeline.rs  round_query.rs  round_replay.rs  round_scheduler.rs  state.rs  state_transition.rs
execution/src/casino/: baccarat.rs  batch_boundary_tests.rs  blackjack.rs  bridge_abi_tests.rs  cards.rs  casino_war.rs  craps.rs  event_encoding.rs  hilo.rs  integration_tests.rs  ledger_integration_tests.rs  logging.rs  migration_tests.rs  mod.rs  payload.rs  protocol_round_trip_tests.rs  registry.rs  roulette.rs  serialization.rs  sic_bo.rs  super_mode.rs  three_card.rs  ultimate_holdem.rs  video_poker.rs
execution/src/layer/: mod.rs
execution/src/layer/handlers/: bridge.rs  casino.rs  liquidity.rs  mod.rs  staking.rs
feynman/: feynman.md
gateway/: .gateway-nonces.json  Dockerfile  package.json
http:/: CONTINUITY.md
mobile/: .detoxrc.js  .env.example  App.tsx  eslint.config.js  jest.config.js  metro.config.js  package.json  tsconfig.json  vitest.config.ts
node/: Cargo.toml  Dockerfile  README.md
node/src/: backoff.rs  defaults.rs  engine.rs  indexer.rs  lib.rs  main.rs  supervisor.rs  system_metrics.rs  tests.rs
node/src/aggregator/: actor.rs  ingress.rs  mod.rs
node/src/application/: actor.rs  ingress.rs  mempool.rs  mod.rs
node/src/seeder/: actor.rs  ingress.rs  mod.rs
plans/: automation-roadmap.yml  feat-shared-packages-monorepo-architecture.md  migrate-simulator-to-consensus-nodes.md
ralph/: Cargo.toml  FEATURE_INVENTORY.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_plan_work.md  RALPHREADME.md  SAMPLE_IMPLEMENTATION_PLAN.md  loopclaude.sh  loopcodex.sh  loopreview.sh
ralph/crates/codexpoker/: Cargo.toml
ralph/crates/codexpoker-onchain/: Cargo.toml
ralph/crates/codexpoker-onchain/src/: adversarial_tests.rs  artifact_registry.rs  block.rs  consensus.rs  fuzz_tests.rs  lib.rs  messages.rs  metrics.rs  perf_tests.rs  proptest_replay.rs  protocol_audit.rs  state.rs  storage.rs
ralph/crates/codexpoker/src/: l2.rs  lib.rs
ralph/crates/protocol-messages/: Cargo.toml
ralph/crates/protocol-messages/src/: baccarat.rs  blackjack.rs  casino_war.rs  codec.rs  craps.rs  exports.rs  golden_vectors.rs  hilo.rs  lib.rs  payload.rs  roulette.rs  sic_bo.rs  three_card.rs  ultimate_holdem.rs  video_poker.rs
ralph/crates/protocol-messages/tests/: export_protocol_cli.rs
randotron/: Cargo.toml  README.md
randotron/src/: lib.rs  main.rs  state_machine.rs
scripts/: agent-down.sh  agent-loop.sh  agent-next.sh  agent-review.sh  agent-up.sh  android-emulator.sh  android-env.sh  audit-monochrome.mjs  bootstrap-testnet.sh  clear-browser-nonce.sh  consensus-watchdog.sh  coverage-all.mjs  decrypt-secrets.sh  diagnose-chain-latency.ts  e2e-auth-billing-local.sh  faucet.mjs  faucet.sh  gateway-recovery-drill.sh  generate-admin-key.sh  health-check-full.sh  health-check.sh  load-test.sh  mock-backend.mjs  phase-sim.sh  phase2-e2e-sim.sh  preflight-management.mjs  prune-dev-artifacts.sh  qa-simplify-down.sh  qa-simplify-up.sh  recover-consensus.sh  review-agents.mjs  (+20 more)
services/live-table/: Cargo.toml
services/live-table/src/: main.rs
simulator/: Cargo.toml  README.md
simulator/examples/: get_identity.rs  house_edge.rs
simulator/src/: cache.rs  explorer.rs  explorer_persistence.rs  fanout.rs  lib.rs  main.rs  mempool.rs  metrics.rs  passkeys.rs  state.rs  submission.rs  summary_persistence.rs
simulator/src/api/: http.rs  mod.rs  ws.rs
terminal-cli/: Cargo.toml  README.md
terminal-cli/src/: main.rs
types/: Cargo.toml  README.md
types/benches/: tournament_membership.rs
types/src/: api.rs  casino.rs  casino_state.rs  compat.rs  execution.rs  lib.rs  token.rs
types/src/casino/: codec.rs  constants.rs  economy.rs  game.rs  global_table.rs  leaderboard.rs  mod.rs  player.rs  tests.rs  tournament.rs
website/wasm/: Cargo.toml
website/wasm/src/: lib.rs
(+2499 files in other folders)
