[workspace]
members = [
    "node",
    "client",
    "execution",
    "simulator",
    "types",
    "website/wasm",
    "terminal-cli",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
nullspace-client = { version = "0.0.1", path = "client" }
nullspace-node = { version = "0.0.1", path = "node" }
nullspace-execution = { version = "0.0.1", path = "execution", default-features = false }
nullspace-simulator = { version = "0.0.1", path = "simulator" }
nullspace-types = { version = "0.0.1", path = "types" }
# Commonware dependencies
commonware-broadcast = { version = "0.0.64" }
commonware-codec = { version = "0.0.64" }
commonware-consensus = { version = "0.0.64" }
commonware-cryptography = { version = "0.0.64" }
commonware-deployer = { version = "0.0.64", default-features = false }
commonware-macros = { version = "0.0.64" }
commonware-math = { version = "0.0.64" }
commonware-p2p = { version = "0.0.64" }
commonware-resolver = { version = "0.0.64" }
commonware-runtime = { version = "0.0.64" }
commonware-storage = { version = "0.0.64" }
commonware-stream = { version = "0.0.64" }
commonware-utils = { version = "0.0.64" }

# Common dependencies
anyhow = "1.0.99"
thiserror = "2.0.12"
bytes = "1.7.1"
rand = "0.8.5"
futures = "0.3.31"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-opentelemetry = "0.29.0"
opentelemetry = "0.28.0"
opentelemetry-otlp = "0.28.0"
opentelemetry_sdk = "0.28.0"
governor = "0.6.3"
prometheus-client = "0.24.0"
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
rayon = "1.10.0"
rand_chacha = "0.3.1"
uuid = "1.15.1"
sysinfo = "0.33.1"
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }

# Web/API dependencies
axum = { version = "0.7.9", features = ["ws"] }
reqwest = { version = "0.11.27", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tower = "0.5.2"
url = "2.5.4"

[profile.bench]
# Because we enable overflow checks in "release," we should benchmark with them.
overflow-checks = true

[profile.dev]
# Although overflow checks are enabled by default in "dev", we explicitly
# enable them here for clarity.
overflow-checks = true

[profile.release]
# To guard against unexpected behavior in production, we enable overflow checks in
# "release" although they incur some performance penalty.
overflow-checks = true

[profile.release-with-debug]
inherits = "release"
# Setting debug to true instructs cargo to include debug symbols in the release
# binary (not to disable optimizations).
debug = true

[profile.test]
# Although overflow checks are enabled by default in "test", we explicitly
# enable them here for clarity.
overflow-checks = true
