[package]
name = "nullspace-client"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "SDK for interacting with nullspace."
homepage = "https://nullspace.xyz"
repository = "https://github.com/commonwarexyz/nullspace/tree/main/client"
documentation = "https://docs.rs/nullspace-client"
readme = "README.md"

[dependencies]
nullspace-execution = { workspace = true, features = ["mocks", "parallel"] }
nullspace-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
nullspace-simulator = { workspace = true }
axum = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "dev-executor"
path = "src/bin/dev_executor.rs"
required-features = []

[[bin]]
name = "stress-test"
path = "src/bin/stress_test.rs"
required-features = []

[dependencies.clap]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.commonware-runtime]
workspace = true

[dependencies.commonware-storage]
workspace = true

