[package]
name = "nullspace-client"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "SDK for interacting with nullspace."
homepage = "https://nullspace.xyz"
repository = "https://github.com/commonwarexyz/nullspace/tree/main/client"
documentation = "https://docs.rs/nullspace-client"
readme = "README.md"
autobins = false

[dependencies]
nullspace-execution = { workspace = true, features = ["mocks", "parallel"] }
nullspace-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-math = { workspace = true }
commonware-utils = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json.workspace = true
anyhow = { workspace = true }
ethers = { version = "2.0.14", features = ["abigen"] }

[dev-dependencies]
nullspace-simulator = { workspace = true }
axum = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "bridge-relayer"
path = "src/bin/bridge_relayer.rs"
required-features = []

[[bin]]
name = "seed-submit"
path = "src/bin/seed_submit.rs"
required-features = []

[[bin]]
name = "tournament-scheduler"
path = "src/bin/tournament_scheduler.rs"
required-features = []

[dependencies.clap]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.commonware-runtime]
workspace = true

[dependencies.commonware-storage]
workspace = true
