[package]
name = "battleware-deployer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "Tools for deploying battleware."
readme = "README.md"
homepage = "https://battleware.xyz"
repository = "https://github.com/commonwarexyz/battleware/tree/main/deployer"
documentation = "https://docs.rs/battleware-deployer"

[dependencies]
battleware-node = { workspace = true }
battleware-randotron = { workspace = true }
battleware-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-deployer = { workspace = true }
commonware-utils = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
uuid = { workspace = true, features = ["v4"] }
