[package]
name = "nullspace-deployer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "Tools for deploying nullspace."
readme = "README.md"
homepage = "https://nullspace.xyz"
repository = "https://github.com/commonwarexyz/nullspace/tree/main/deployer"
documentation = "https://docs.rs/nullspace-deployer"

[dependencies]
nullspace-node = { workspace = true }
nullspace-randotron = { workspace = true }
nullspace-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-deployer = { workspace = true }
commonware-utils = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
uuid = { workspace = true, features = ["v4"] }
