[package]
name = "battleware-node"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Validator that participates in a battleware network."
readme = "README.md"
homepage = "https://battleware.xyz"
repository = "https://github.com/commonwarexyz/battleware/tree/main/node"
documentation = "https://docs.rs/battleware-node"

[dependencies]
battleware-types = { workspace = true }
battleware-client = { workspace = true }
battleware-execution = { workspace = true, features = ["parallel"] }
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-deployer = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-resolver = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-stream = { workspace = true }
commonware-utils = { workspace = true }
bytes =  { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
governor = { workspace = true }
prometheus-client = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
rayon = { workspace = true }
