[package]
name = "nullspace-node"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Validator that participates in a nullspace network."
readme = "README.md"
homepage = "https://nullspace.xyz"
repository = "https://github.com/commonwarexyz/nullspace/tree/main/node"
documentation = "https://docs.rs/nullspace-node"

[[bin]]
name = "generate-keys"
path = "src/bin/generate_keys.rs"

[[bin]]
name = "test-transactions"
path = "src/bin/test_transactions.rs"

[[bin]]
name = "init-amm"
path = "src/bin/init_amm.rs"

[dependencies]
nullspace-types = { workspace = true }
nullspace-client = { workspace = true }
nullspace-execution = { workspace = true, features = ["parallel"] }
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-deployer = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-resolver = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-stream = { workspace = true }
commonware-utils = { workspace = true }
bytes =  { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
governor = { workspace = true }
prometheus-client = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
rayon = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }
