[package]
name = "nullspace-randotron"
publish = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Simple bot that randomly plays nullspace."
readme = "README.md"
homepage = "https://nullspace.xyz"
repository = "https://github.com/commonwarexyz/nullspace/tree/main/randotron"
documentation = "https://docs.rs/nullspace-randotron"

[dependencies]
nullspace-client = { workspace = true }
nullspace-types = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-macros = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
commonware-runtime = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
nullspace-execution = { workspace = true }
commonware-runtime = { workspace = true }
