[package]
name = "terminal-cli"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Nullspace terminal CLI with grouped slash commands and completions"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = "1.5"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6.0"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = "0.6"
base64 = "0.22"
hex = "0.4"
