[package]
name = "nullspace-types"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Common types used throughout nullspace."
readme = "README.md"
homepage = "https://nullspace.xyz"
repository = "https://github.com/commonwarexyz/nullspace/tree/main/types"
documentation = "https://docs.rs/nullspace-types"

[features]
default = ["root-reexports"]
root-reexports = []

[dependencies]
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "tournament_membership"
harness = false
