[package]
name = "nullspace-live-table"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }

nullspace-execution = { workspace = true }
nullspace-types = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-consensus = { workspace = true }
commonware-math = { workspace = true }
