[package]
name = "nullspace-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
private-key-export = []
testing = ["nullspace-execution/mocks", "private-key-export"]

[dependencies]
# WASM specific dependencies
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# Workspace dependencies
nullspace-execution = { workspace = true, default-features = false }
nullspace-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nullspace-wasm = { path = ".", features = ["testing"] }
