[package]
name = "codexpoker-onchain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Consensus payload schema and onchain message types for CodexPoker"

[dependencies]
protocol-messages = { path = "../protocol-messages" }
blake3.workspace = true
hex.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
