[package]
name = "codexpoker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core poker game logic and L2 deal planning for CodexPoker"

[dependencies]
protocol-messages = { path = "../protocol-messages" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
